# image_description

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: database.py  endpoints.py  generate_caption.py  main.py  models.py  settings.py
