[project]
name = "image-description"
version = "0.1.0"
description = ""
authors = [
    {name = "samvel.mhitaryan",email = "samvel.mhitaryan@mstroy.tech"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "fastapi (==0.115.11)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.2)",
    "pillow (==11.1.0)",
    "pydantic (==2.10.6)",
    "pydantic-core (==2.27.2)",
    "pygments (==2.19.1)",
    "python-dotenv (==1.0.1)",
    "python-multipart (==0.0.20)",
    "pyyaml (==6.0.2)",
    "requests (==2.32.3)",
    "sqlalchemy (==2.0.38)",
    "starlette (==0.46.1)",
    "torch (==2.6.0)",
    "tqdm (==4.67.1)",
    "transformers (==4.49.0)",
    "uvicorn (==0.34.0)",
    "websockets (==15.0.1)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "black (==25.1.0)",
    "isort (==6.0.1)",
    "flake8 (==7.1.2)",
    "pre-commit (==4.1.0)",
    "mypy (==1.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
